@@ -20,18 +20,26 @@ import sys
 logger = logging.getLogger('backup')
 
 
-def backup_main(bin_dir, datafs, backup_location, keep, full, verbose, gzip):
+def backup_main(bin_dir, datafs, backup_location, keep, full, verbose, gzip, additional):
     """Main method, gets called by generated bin/backup."""
     repozo = os.path.join(bin_dir, 'repozo')
     logger.info("Backing up database file: %s to %s...",
                 datafs, backup_location)
     os.system(repozo + ' ' +
               backup_arguments(datafs, backup_location, full, verbose, gzip))
+    for a in additional:
+        fs = datafs.replace('Data.fs', '%s.fs' % a)
+        location = backup_location + '_' + a
+        logger.info("Backing up database file: %s to %s...",
+                    fs, location)
+        os.system(repozo + ' ' +
+                  backup_arguments(fs, location, full, verbose, gzip))
+
     logger.debug("Repozo command executed.")
     cleanup(backup_location, keep)
 
 
-def snapshot_main(bin_dir, datafs, snapshot_location, keep, verbose, gzip):
+def snapshot_main(bin_dir, datafs, snapshot_location, keep, verbose, gzip, additional):
     """Main method, gets called by generated bin/snapshotbackup."""
     repozo = os.path.join(bin_dir, 'repozo')
     logger.info("Making snapshot backup: %s to %s...",
@@ -39,11 +47,20 @@ def snapshot_main(bin_dir, datafs, snapshot_location, keep, verbose, gzip):
     os.system(repozo + ' ' +
               backup_arguments(datafs, snapshot_location,
                                full=True, verbose=verbose, gzip=gzip))
+    for a in additional:
+        fs = datafs.replace('Data.fs', '%s.fs' % a)
+        location = snapshot_location + '_' + a
+        logger.info("Making snapshot backup: %s to %s...",
+                    fs, location)
+        os.system(repozo + ' ' +
+                  backup_arguments(fs, location,
+                                   full=True, verbose=verbose, gzip=gzip))
+
     logger.debug("Repozo command executed.")
     cleanup(snapshot_location, keep)
 
 
-def restore_main(bin_dir, datafs, backup_location, verbose):
+def restore_main(bin_dir, datafs, backup_location, verbose, additional):
     """Main method, gets called by generated bin/restore."""
     repozo = os.path.join(bin_dir, 'repozo')
     logger.debug("If things break: did you stop zope?")
@@ -57,6 +74,14 @@ def restore_main(bin_dir, datafs, backup_location, verbose):
                 backup_location, datafs)
     os.system(repozo + ' ' +
               restore_arguments(datafs, backup_location, date, verbose))
+    for a in additional:
+        fs = datafs.replace('Data.fs', '%s.fs' % a)
+        location = backup_location + '_' + a
+        logger.info("Restoring database file: %s to %s...",
+                    location, fs)
+        os.system(repozo + ' ' +
+                  restore_arguments(fs, location, date, verbose))
+
     logger.debug("Repozo command executed.")
 
 
